--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "tribi-endpoint",
   "main": "server.js",
   "scripts": {
-    "start-dev": "node server.js",
-    "start": "node ./src/app/app.js",
-    "test": "node minio.js"
+    "start-dev": "nodemon server.js",
+    "start": "nodemon ./src/app/app.js",
+    "test": "nodemon minio.js"
   },
   "author": "Hanifah",
   "license": "ISC",
