--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tribi-endpoint",
   "main": "server.js",
   "scripts": {
-    "start-dev": "nodemon server.js",
+    "dev": "nodemon server.js",
     "start": "nodemon ./src/app/app.js",
     "test": "nodemon minio.js"
   },
