--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "tribi-endpoint",
   "main": "server.js",
   "scripts": {
-    "start-dev": "nodemon server.js",
-    "start": "nodemon ./src/app/app.js",
-    "test": "nodemon minio.js"
+    "start": "node server.js"
   },
-  "author": "Hanifah",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -20,7 +18,6 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "pg": "^8.9.0",
     "pg-copy-streams": "^6.0.4",
