--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "tribi-endpoint",
   "main": "server.js",
   "scripts": {
-    "start-dev": "nodemon server.js",
-    "start": "nodemon ./src/app/app.js",
+    "start": "node ./src/app/app.js",
+    "dev": "nodemon ./src/app/app.js",
     "test": "nodemon minio.js"
   },
   "author": "Hanifah",
