--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "tribi-endpoint",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon ./src/app/app.js",
+    "start-dev": "nodemon server.js",
+    "start": "nodemon ./src/app/app.js",
     "test": "nodemon minio.js"
   },
   "author": "Hanifah",
@@ -21,7 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
-    "passport": "^0.4.0",
+    "passport": "^0.6.0",
     "pg": "^8.9.0",
     "pg-copy-streams": "^6.0.4",
     "pg-dump": "^0.10.0"
